Fix autofill text contrast on login form

--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -16,6 +16,14 @@ button:disabled, [role="button"][aria-disabled="true"] {
   background-size: 1.25em 1.25em;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus {
+  -webkit-text-fill-color: #e4e4e7;
+  -webkit-box-shadow: 0 0 0px 1000px #27272a inset;
+  transition: background-color 5000s ease-in-out 0s;
+}
+
 input[type="range"] {
   -webkit-appearance: none;
   appearance: none;
